[package]
name = "solana-escrow"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "2.0.3"
signature = "2.3.0-pre.4"
tokio = "1.39.2"
thiserror = "1.0.63"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
arrayref = "0.3.8"

[lib]
crate-type = ["cdylib", "lib"]
